--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -117,6 +117,6 @@
   <script>window.jQuery || document.write('<script type="text/javascript" src="/static/js/libs/jquery-1.11.1.min.js"><\/script>')</script>
   <script type="text/javascript" src="/static/js/libs/bootstrap-3.1.1.min.js" defer></script>
   <script type="text/javascript" src="/static/js/plugins.js" defer></script>
-
+  <script type="module" src="/static/js/controllers/index.js"></script>
 </body>
 </html>
