--- a/templates/forms/new_artist.html
+++ b/templates/forms/new_artist.html
@@ -2,7 +2,7 @@
 {% block title %}New Artist{% endblock %}
 {% block content %}
   <div class="form-wrapper">
-    <form method="post" class="form">
+    <form method="post" class="form" id="artist-form">
       <h3 class="form-heading">List a new artist</h3>
       <div class="form-group">
         <label for="name">Name</label>
