display venue and artist details edit venue and artist

--- a/templates/forms/edit_artist.html
+++ b/templates/forms/edit_artist.html
@@ -2,8 +2,8 @@
 {% block title %}Edit Artist{% endblock %}
 {% block content %}
   <div class="form-wrapper">
-    <form class="form" method="post" action="/artists/{{artist.id}}/edit">
-      <h3 class="form-heading">Edit artist <em>{{ artist.name }}</em></h3>
+    <form class="form" method="post" id="update-artist-form">
+      <h3 class="form-heading" data-id={{ artist.id }}>Edit artist <em>{{ artist.name }}</em></h3>
       <div class="form-group">
         <label for="name">Name</label>
         {{ form.name(class_ = 'form-control', autofocus = true) }}
